Remove usages of deprecated (in Java 9 and above) `Class#newInstance`